Update Controller.java to be compatible with JDK 8